[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
itertools = "0.12.0"
nalgebra = "0.32.3"
num-bigint = "0.4.4"
num-integer = "0.1.45"
num-traits = "0.2.17"
regex = "1.10.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tailcall = "0.1.6"
